compiler/framework/test/fail/modulus.cvc
// Modulus only works on integers.


export int main() {
    6.0 % 5.0;
    return 0;
}
